--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
     sdk: flutter
   get:
   dio: ^4.0.1
-  carousel_slider: ^4.0.0
+  carousel_slider:
   cached_network_image: ^3.1.0
   flutter_screenutil: ^5.0.0+2
-  google_maps_flutter: ^2.1.0
+#  google_maps_flutter: ^2.1.0
   hexcolor: ^2.0.5
   geolocator: ^9.0.2
   geocoding:
@@ -57,6 +57,11 @@ dependencies:
   intl:
   connectivity:
   firebase_core_platform_interface: 4.5.1
+  google_maps_flutter:
+    git:
+      url: https://github.com/lukaskurz/plugins
+      path: packages/google_maps_flutter/google_maps_flutter
+      ref: main
 
 
 
